<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>here4_dronecan_bridge</name>
  <version>0.1.0</version>
  <description>DroneCAN bridge for Here 4 GPS/IMU/Magnetometer sensor. Reads data from CAN bus and publishes as standard ROS 2 topics.</description>
  <maintainer email="hikmetselcukgunes@gmail.com">gunes</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
